@@ -1,6 +1,6 @@
 /***************************************************************************
  *                                                                         *
- *   Copyright (C) 2008 - 2009 Grigor Iliev, Benno Senoner                 *
+ *   Copyright (C) 2008 - 2012 Grigor Iliev, Benno Senoner                 *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -90,7 +90,8 @@ namespace LinuxSampler {
              */
             static void WalkDirectoryTree(std::string Dir, DirectoryWalker* pWalker);
 
-            static char DirSeparator;
+            static const char DirSeparator;
+            static const char PathSeparator;
 
         private:
             bool bExist;
